# activity-inquirer

./: .goreleaser.yml  Augment-feedback.md  Cargo.toml  README.md
.github/: dependabot.yml  release-template.md
.github/workflows/: ci.yml  release.yml  test-version.yml  version.yml
scripts/: build-local.sh  generate_logo.py  install.bat  release.sh
src/: config.rs  daemon.rs  database.rs  fonts.rs  main.rs  models.rs
src/ui/: inquiry.rs  mod.rs  settings.rs  theme.rs  viewer.rs
