[package]
name = "acv-inq"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.32"
egui = "0.24"
rusqlite = { version = "0.30", features = ["bundled"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
